fix sub menu flickering

--- a/src/styles/_megamenu.less
+++ b/src/styles/_megamenu.less
@@ -407,7 +407,7 @@
     letter-spacing: -0.4px;
     color: @color-navy;
     text-decoration: none;
-    transition: font-weight 0.2s ease;
+    transition: color 0.4s ease;
     flex: 1;
     outline: none;
     border: none;
@@ -495,7 +495,7 @@
 
   a {
     pointer-events: none; // Prevent link navigation, use JS click handler instead
-    transition: font-weight 0.2s ease;
+    transition: color 0.4s ease;
 
     &:hover {
       font-weight: 700;
