--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1209,7 +1209,7 @@ body.mega-menu-open .site-header .hamburger .hamburger .line:nth-child(3) {
   letter-spacing: -0.4px;
   color: #183153;
   text-decoration: none;
-  transition: font-weight 0.2s ease;
+  transition: color 0.4s ease;
   flex: 1;
   outline: none;
   border: none;
@@ -1273,7 +1273,7 @@ body.mega-menu-open .site-header .hamburger .hamburger .line:nth-child(3) {
 }
 .mega-menu__subnav-item--clickable a {
   pointer-events: none;
-  transition: font-weight 0.2s ease;
+  transition: color 0.4s ease;
 }
 .mega-menu__subnav-item--clickable a:hover {
   font-weight: 700;
